--- a/layouts/partials/docs/mobile-header.html
+++ b/layouts/partials/docs/mobile-header.html
@@ -1,6 +1,6 @@
 <header class="flex align-center justify-between book-header">
   <label for="menu-control">
-    <img src="{{ "svg/menu.svg" | relURL }}" alt="Menu" />
+    <img src="{{ "svg/menu.svg" | relURL }}" class="book-icon" alt="Menu" />
   </label>
   <strong>{{ partial "docs/title" . }}</strong>
 </header>
