--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -1,14 +1,16 @@
 {{ define "main" }}
-{{ $dateFormat := default "January 2, 2006" .Site.Params.BookDateFormat }}
-<header class="markdown">
-  <h1>{{ .Title }}</h1>
-  <h5>
-    <strong>{{ .Date.Format $dateFormat }}</strong>
-  </h5>
-</header>
-<article class="markdown">
-  {{- .Content -}}
-</article>
+  {{ $dateFormat := default "January 2, 2006" .Site.Params.BookDateFormat }}
+  <header class="markdown">
+    <h1>{{ .Title }}</h1>
+    {{ with .Date }}
+    <h5>
+      <strong>{{ .Format $dateFormat }}</strong>
+    </h5>
+    {{ end }}
+  </header>
+  <article class="markdown">
+    {{- .Content -}}
+  </article>
 {{ end }}
 
 {{ define "toc" }}
