feat: added the 'Subtitle' parameter, useful for showing the author

--- a/assets/_main.scss
+++ b/assets/_main.scss
@@ -109,6 +109,10 @@ ul.pagination {
   }
 }
 
+.book-subtitle {
+  font-size: $font-size-14;
+}
+
 .book-menu {
   flex: 0 0 $menu-width;
   font-size: $font-size-14;
