--- a/layouts/partials/docs/footer.html
+++ b/layouts/partials/docs/footer.html
@@ -26,6 +26,6 @@
 
 </div>
 
-{{ if .Site.DisqusShortname }}
+{{ if and (not (eq .Site.DisqusShortname "")) (not .Params.bookDisableComments ) }}
   {{ template "_internal/disqus.html" . }}
 {{ end }}
