--- a/layouts/partials/docs/toc.html
+++ b/layouts/partials/docs/toc.html
@@ -1,6 +1,10 @@
 {{ $tocLevels := default (default 6 .Site.Params.BookToC) .Params.BookToC }}
 {{ if and $tocLevels .Page.TableOfContents }}
   <aside class="book-toc levels-{{$tocLevels}} fixed">
-    {{ .Page.TableOfContents }}
+    {{ with .Page.TableOfContents }}
+    <label id="tos-menu-control" for="toc-menu-control">
+    {{ . }}
+    </label>
+    {{ end }}
   </aside>
 {{ end }}
