--- a/layouts/partials/docs/mobile-header.html
+++ b/layouts/partials/docs/mobile-header.html
@@ -2,7 +2,7 @@
   <label id="menu-control" for="menu-control">
     <img src="{{ "svg/menu.svg" | relURL }}" class="book-icon" alt="Menu" />
   </label>
-  <label id="tos-menu-control" for="toc-menu-control">
+  <label id="toc-control" for="toc-control">
   <strong>{{ partial "docs/title" . }}</strong>
   </label>
 </header>
