feat: added support for Disqus (#120)
* feat: added support for Disqus
* feat: allow disqus to be disabled through frontmatter

Set:
    bookDisableComments: true

On a page to disable disqus for the content.

--- a/layouts/partials/docs/footer.html
+++ b/layouts/partials/docs/footer.html
@@ -25,3 +25,7 @@
   {{ end }}
 
 </div>
+
+{{ if and (not (eq .Site.DisqusShortname "")) (not .Params.bookDisableComments ) }}
+  {{ template "_internal/disqus.html" . }}
+{{ end }}
