--- a/layouts/partials/docs/footer.html
+++ b/layouts/partials/docs/footer.html
@@ -26,6 +26,6 @@
 
 </div>
 
-{{ if and (not (eq .Site.DisqusShortname "")) (not .Params.bookDisableComments ) }}
+{{ if (default true (default .Site.Params.BookDisqus .Params.bookDisqus)) }}
   {{ template "_internal/disqus.html" . }}
 {{ end }}
