--- a/assets/_main.scss
+++ b/assets/_main.scss
@@ -240,10 +240,8 @@ ul.pagination {
   }
 }
 
-// Give a little extra space before showing Disqus comments. See:
-// https://github.com/gohugoio/hugo/blob/master/tpl/tplimpl/embedded/templates/disqus.html#L3
-#disqus_thread {
-  padding-top: $padding-16;
+.book-comments {
+  margin-top: $padding-16;
 }
 
 .book-languages {
