Rework of main template, adds options for more fine customisation

--- a/assets/_defaults.scss
+++ b/assets/_defaults.scss
@@ -31,15 +31,14 @@ $body-background: white !default;
 $body-font-color: $gray-800 !default;
 $body-font-weight: normal !default;
 
-$body-min-width: 20rem !default;
+$body-min-width: 25rem !default;
 $container-max-width: 80rem !default;
 
 $header-height: 3.5rem !default;
 $menu-width: 16rem !default;
 $toc-width: 16rem !default;
 
-$md-breakpoint: $menu-width + $body-min-width * 1.25 + $toc-width !default;
-$sm-breakpoint: $menu-width + $body-min-width !default;
+$mobile-breakpoint: $menu-width + $body-min-width + $toc-width !default;
 
 // Hint colors
 $hint-colors: (
