--- a/assets/_print.scss
+++ b/assets/_print.scss
@@ -1,19 +1,17 @@
 @media print {
   .book-menu,
-  .book-footer {
+  .book-footer,
+  .book-toc {
     display: none;
   }
 
-  main {
+  .book-header,
+  .book-header aside {
     display: block;
   }
 
-  .book-toc {
-    flex: none;
-
-    nav {
-      position: relative;
-      width: auto;
-    }
+  main {
+    // Fix for https://bugzilla.mozilla.org/show_bug.cgi?id=939897
+    display: block !important;
   }
 }
