--- a/assets/_defaults.scss
+++ b/assets/_defaults.scss
@@ -28,7 +28,7 @@ $color-link: #05b !default;
 $color-visited-link: #8440f1 !default;
 
 $body-background: white !default;
-$body-font-color: $gray-800 !default;
+$body-font-color: $black !default;
 $body-font-weight: normal !default;
 
 $body-min-width: 20rem !default;
