Button shortcode redesign: smaller font, resize

--- a/assets/_main.scss
+++ b/assets/_main.scss
@@ -181,7 +181,7 @@ ul.pagination {
     padding: $padding-8;
 
     border: 0;
-    border-radius: $padding-4;
+    border-radius: $border-radius;
 
     background: $gray-100;
     color: $body-font-color;
