--- a/assets/_defaults.scss
+++ b/assets/_defaults.scss
@@ -9,7 +9,7 @@ $font-size-12: 0.75rem !default;
 $font-size-14: 0.875rem !default;
 $font-size-16: 1rem !default;
 
-$border-radius: 0.15rem !default;
+$border-radius: $padding-4 !default;
 
 // Grayscale
 $white: #ffffff !default;
