--- a/assets/_main.scss
+++ b/assets/_main.scss
@@ -2,6 +2,7 @@ html {
   font-size: $font-size-base;
   letter-spacing: 0.33px;
   scroll-behavior: smooth;
+  touch-action: manipulation;
 }
 
 html,
