#154, Add menu overlay over content to hide menu on click

--- a/assets/_main.scss
+++ b/assets/_main.scss
@@ -324,6 +324,15 @@ aside nav,
     .markdown {
       opacity: 0.25;
     }
+
+    .book-menu-overlay {
+      display: block;
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+    }
   }
 
   #toc-control:checked + aside {
