#155, Add expand indicator in collapsed section

--- a/assets/_main.scss
+++ b/assets/_main.scss
@@ -118,6 +118,11 @@ ul.pagination {
   a.active {
     color: $color-link;
   }
+
+  a.collapsed::after {
+    content: "▸";
+    margin-left: $padding-8;
+  }
 }
 
 .book-section-flat {
