#157, Make docs template default for all pages

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -71,9 +71,11 @@
 {{ end }}
 
 {{ define "main" }}
-  {{ .Content }}
+  <article class="markdown">
+    {{- .Content -}}
+  </article>
 {{ end }}
 
 {{ define "toc" }}
-  {{ .TableOfContents }}
+  {{ partial "docs/toc" . }}
 {{ end }}
