Allow nesting tabs shortcodes This is to allow multi-level selectors Markdown only works in the bottom-most tabs

--- a/layouts/shortcodes/tabs.html
+++ b/layouts/shortcodes/tabs.html
@@ -9,7 +9,7 @@
     {{ $tab.Name }}
   </label>
   <div class="book-tabs-content markdown-inner">
-    {{ .Content | markdownify }}
+    {{ cond (in (string .Content) `<div class="book-tabs">`) .Content (.Content | markdownify) }}
   </div>
 {{- end -}}
 </div>
