--- a/layouts/shortcodes/tabs.html
+++ b/layouts/shortcodes/tabs.html
@@ -3,13 +3,13 @@
 {{ $group := printf "tabs-%s" $id }}
 
 <div class="book-tabs">
-{{- range $index, $tab :=  .Scratch.Get $group -}}
+{{- range $index, $tab := .Scratch.Get $group -}}
   <input type="radio" class="hidden" name="{{ $group }}" id="{{ printf "%s-%d" $group $index }}" {{ if not $index }}checked="checked"{{ end }} />
   <label for="{{ printf "%s-%d" $group $index }}">
-    {{ $tab.Name }}
+    {{- $tab.Name -}}
   </label>
   <div class="book-tabs-content markdown-inner">
-    {{ .Content | markdownify }}
+    {{- .Content | markdownify -}}
   </div>
 {{- end -}}
 </div>
