--- a/layouts/partials/docs/html-head.html
+++ b/layouts/partials/docs/html-head.html
@@ -1,6 +1,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="{{ partial "docs/title" . }}">
+<meta name="description" content="{{ with .Description }} {{ . }} {{ else }} {{ with .Summary }} {{ . }} {{ else }} {{ with .Site.Params.description }} {{ . }} {{ else }} {{ partial "docs/title" . }} {{ end }} {{ end }} {{ end }}">
+
 {{- template "_internal/opengraph.html" . -}}
 
 <title>{{ partial "docs/title" . }} | {{ .Site.Title -}}</title>
