added go home url #172

--- a/layouts/404.html
+++ b/layouts/404.html
@@ -9,6 +9,7 @@
 <body>
   <main class="flex justify-center">
     <h1>404 Not Found</h1>
+    <h2><a href="{{ "/" | relURL }}">Go Home</a></h2>
   </main>
 
   {{ partial "docs/inject/body" . }}
