Update scrollbar resets

--- a/assets/plugins/_scrollbars.scss
+++ b/assets/plugins/_scrollbars.scss
@@ -1,6 +1,7 @@
 @import "defaults";
 @import "variables";
 
+// Webkit
 ::-webkit-scrollbar {
   width: $padding-8;
 }
@@ -12,4 +13,14 @@
 
 :hover::-webkit-scrollbar-thumb {
   background: $gray-500;
+}
+
+// MS
+body {
+  -ms-overflow-style: -ms-autohiding-scrollbar
+}
+
+// Future
+.book-menu nav {
+  scrollbar-color: transparent $gray-500;
 }
