--- a/layouts/404.html
+++ b/layouts/404.html
@@ -8,8 +8,10 @@
 
 <body>
   <main class="flex justify-center">
-    <h1>404 Not Found</h1>
-    <h2><a href="{{ "/" | relURL }}">Go Home</a></h2>
+    <div>
+      <h1>404 Not Found</h1>
+      <h2><a href="{{ "/" | relURL }}">Go Home</a></h2>
+    </div>
   </main>
 
   {{ partial "docs/inject/body" . }}
