--- a/layouts/404.html
+++ b/layouts/404.html
@@ -10,7 +10,7 @@
   <main class="flex justify-center">
     <div>
       <h1>404 Not Found</h1>
-      <h2><a href="{{ "/" | relURL }}">Go Home</a></h2>
+      <a href="{{ "/" | relURL }}">Go Home</a>
     </div>
   </main>
 
