--- a/layouts/_default/_markup/render-image.html
+++ b/layouts/_default/_markup/render-image.html
@@ -1,8 +1,8 @@
-{{ if .Page.Site.Params.BookPortableLinks }}
+{{- if .Page.Site.Params.BookPortableLinks -}}
   {{- template "portable-image" . -}}
-{{ else }}
+{{- else -}}
   <img src="{{ .Destination | safeURL }}" alt="{{ .Text }}" {{ with .Title }}title="{{ . }}"{{ end }}/>
-{{ end }}
+{{- end -}}
 
 {{- define "portable-image" -}}
   {{- $isRemote := or (in .Destination "://") (strings.HasPrefix .Destination "//") }}
