Properly close a tag

--- a/layouts/partials/docs/footer.html
+++ b/layouts/partials/docs/footer.html
@@ -38,7 +38,7 @@
     <span>Last edit by
       <a href="mailto:{{ .Params.MonakoGitLastCommitAuthorEmail }}" target="_blank" rel="noopener">
         {{ .Params.MonakoGitLastCommitAuthor}}
-      </a> on <a href="{{ .Params.MonakoGitURLCommit}}">{{$lastmod}}</href>
+      </a> on <a href="{{ .Params.MonakoGitURLCommit}}">{{$lastmod}}</a>
     </span>
   </div>
   {{ end }}
